<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About</string>

    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Enter ISBN-13. Digits only.</string>
    <string name="book_cover">Book Cover</string>
    <string name="book_added">Book Added to Library!</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No book found.</string>
    <string name="no_network_access">Network access is not available at this time.</string>
    <string name="book_in_library">Book is already in your library.</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="action_share">Share</string>
    <string name="share_text">A must read book: </string>

    <string name="about_text">This application gets book information from a Google API. All titles,
        cover images, and author information come from there.\n\nThe original version of this app
        was built by Sascha Jaschke. A modified version was given to students in the Udacity Android
        Nanodegree program.Changes made to the version provided by Udacity made by Mary Grimes.
    </string>
    <string name="barcode_capture_label">Scan Barcode</string>
    <string name="title_activity_add_book" translatable="false">AddBookActivity</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
</resources>
